--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<head> <link rel = "stylesheet"
-             href = "style.css" /></head>
+<head>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="js-animation.js"></script>
+    <link rel = "stylesheet" href = "style.css" />
+</head>
 <body>
     <h1 class="hs"> ALL </h1>
 <div >
     <p>la</p>p
 </div>
+
+    <h1 class="hs" id="animTestElm"> ALL </h1>
 </body>
