--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
-<head> <link rel = "stylesheet"
-             href = "style.css" /></head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+
 <body>
-    <h1 class="hs"> ALL </h1>
-<div >
-    <p>la</p>p
-</div>
+    <div class="maincontainer">
+        <nav class="navbar">
+            <h2 id="hamburgerMenu"><a href="#"><span class="hamburger">&#9776;</span> Menu</a></h2>
+            <ul id="navigation" class="closed">
+                <li><a href="#">Menu 1</a></li>
+                <li><a href="#">Menu 2</a> <button>Bouton</button></li>
+                <li><a href="#">Menu 3</a></li>
+            </ul>
+        </nav>
+        <div class="articlecontainer">
+            <article>
+                <img src="img/abstract-q-c-600-60-5.jpg" alt="Banniere profile">
+                <h2>Article goes here</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id quisquam, incidunt iure laboriosam
+                    eveniet
+                    illo, culpa reprehenderit doloribus asperiores earum esse veritatis vitae corrupti ratione itaque
+                    atque
+                    veniam, sapiente ipsam. Rerum modi eos saepe maxime minus voluptate, facere cumque vel.
+                    Voluptatibus
+                    eius labore deserunt optio maxime quia nobis laborum pariatur quos necessitatibus doloribus tempora
+                    neque nihil expedita atque quibusdam nemo quasi, fuga repellendus? Expedita autem ad quae suscipit
+                    nesciunt cumque consequuntur ut molestiae aut incidunt repellendus, id natus soluta cum, est nobis
+                    nisi
+                    hic doloremque quaerat, ea reiciendis odio nam. Minima, modi beatae explicabo maxime quisquam neque
+                    quod aliquam pariatur impedit eum excepturi nihil at, ullam iste voluptatibus nemo tenetur quae,
+                    commodi atque aperiam in molestias! Autem ipsam provident cum repellat deserunt eum delectus
+                    necessitatibus minima harum voluptatibus reprehenderit facilis culpa, veritatis neque aspernatur
+                    cumque
+                    pariatur est vero officia asperiores sit, blanditiis quisquam? Eveniet molestias corrupti ullam
+                    assumenda earum hic.</p>
+            </article>
+            <footer>
+                <img src="img/nature-q-c-200-200-1.jpg" alt="profile image">
+                <div class="description">
+                    <h2>Description</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime labore veniam recusandae quia
+                        debitis! Assumenda illo quae reiciendis, veritatis eum voluptas, voluptatem iure maiores dolore
+                        labore possimus consectetur enim voluptates illum velit nemo corrupti, quia non asperiores
+                        magnam
+                        necessitatibus voluptatum ea blanditiis. Ipsa fugit consequatur illo commodi, reprehenderit
+                        esse
+                        ullam.</p>
+                    <button>Bouton</button>
+                </div>
+            </footer>
+
+        </div>
+
+    </div>
+    <!-- <script src="script.js"></script> -->
 </body>
+
+</html>
